<resources>
    <string name="app_name">JaVisteAMinhaMedia</string>
    <string name="logic">logic</string>
    <string name="theoretical">theoretical</string>
    <string name="network">network</string>
    <string name="group">group</string>
    <string name="programming">programming</string>
    <string name="neutral">neutral</string>
    <string name="title_activity_grades">GradesActivity</string>
    <string name="TextCurrentAverage">A sua media atual: </string>
    <string name="TextBolognaAverage">A sua média de bolonha: </string>
    <string name="TextPretendedAverage">Pretende alcançar media de:</string>
    <string name="prediciton_grades_info">Para o conseguir fazer deve alcançar as seguintes notas:</string>
    <string name="prediciton_grades_error">De forma a conseguirmos criar uma previsão realista precisamos de mais cadeiras acabadas com sucesso</string>
    <string name="firstSemester">1º Semestre</string>
    <string name="secondSemester">2º Semestre</string>
    <string name="firstYear">1º Ano</string>
    <string name="secondYear">2º Ano</string>
    <string name="thirdYear">3º Ano</string>
    <string name="nav_grades">Notas</string>
    <string name="nav_prediction">Previsão</string>
    <string name="tb_branch">Ramo</string>
    <string name="tb_pretended_average">Media Pretendida</string>
    <string name="invalid_inserted_grade">Nota inserida inválida</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="branch_selection">Escolha do Ramo</string>
    <string name="da">Desenvolvimento de Aplicalções</string>
    <string name="si">Sistemas de Informação</string>
    <string name="rd">Redes e Administração de Sistemas</string>
    <string name="cancel">Cancel</string>
    <string name="update">Atualizar</string>
</resources>
