<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:paddingRight="18dp"
    android:paddingLeft="18dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_weight="1"
            android:textSize="19dp"
            android:textStyle="bold"
            android:textColor="@color/colorDarkGrey"
            android:text="@string/branch_selection" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:id="@+id/rg_branch_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp">

            <RadioButton
                android:id="@+id/rb_da"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="5dp"
                android:text="@string/da"
                android:buttonTint="@color/nav_item_colors"
                />

            <RadioButton
                android:id="@+id/rb_si"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="5dp"
                android:textSize="15dp"
                android:text="@string/si"
                android:buttonTint="@color/nav_item_colors"
                />

            <RadioButton
                android:id="@+id/rb_rd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="5dp"
                android:textSize="15dp"
                android:text="@string/rd"
                android:buttonTint="@color/nav_item_colors"
                />

        </RadioGroup>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@null"
            android:textColor="@color/colorPrimary"
            android:gravity="right"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@null"
            android:gravity="right"
            android:text="OK"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

</LinearLayout>