<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.Fragments.PredictionFragment">


    <LinearLayout
        android:layout_marginTop="56dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDarkGrey"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TextCurrentAverage"
            android:textColor="@color/colorWhite"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/current_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Nota"
            android:textColor="@color/colorWhite"
            android:textSize="21sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDarkGrey"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="229dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/TextBolognaAverage"
            android:textColor="@color/colorWhite"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/bologna_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="A"
            android:textColor="@color/colorWhite"
            android:textSize="21sp" />

        <ImageView
            android:id="@+id/btnUpdate_bologna_average"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:src="@drawable/sync" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TextPretendedAverage"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/intended_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="16"
            android:textSize="21sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/prediction_grades_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prediciton_grades_info"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@+id/grades_prediction"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>